# playerbrainz

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .typos.toml  Cargo.toml  README.md  dist-workspace.toml  houdini.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  schema.graphql  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.github/workflows/dist-ci/: build-setup.yml
crates/entities/: Cargo.toml
crates/entities/src/: filesystem_libraries.rs  filesystem_mastering.rs  lib.rs  remote_server_key_library_authorizations.rs  remote_server_keys.rs  remote_servers.rs  server_keypairs.rs  session.rs  user.rs
crates/playerbrainz-scanner/: Cargo.toml  README.md
crates/playerbrainz-scanner/src/: lib.rs  read.rs  structs.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  discovery_endpoint.rs  error.rs  graph.rs  indexer.rs  login.rs  main.rs  shutdown.rs  startup.rs
crates/server/src/graph/: auth.rs  mod.rs  query.rs  user.rs
crates/server/src/graph/fs_libraries/: loader.rs  mod.rs  model.rs  mutation.rs  query.rs
crates/server/src/graph/server/: model.rs  query.rs
crates/server/src/graph/users/: model.rs  mutation.rs  query.rs
crates/signatures/: Cargo.toml
crates/signatures/src/: algorithm.rs  key.rs  key_id.rs  lib.rs
src/: app.d.ts  client.ts  hooks.server.ts
src/lib/: player.svelte.ts  player.test.ts
src/lib/style/: button.css  form.css
src/lib/vitest-examples/: Welcome.svelte  Welcome.svelte.spec.ts  greet.spec.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Player.svelte  Track.svelte  Track.svelte.ignore  mrrp.gql
src/routes/login/: +page.server.ts  +page.svelte  +page.ts  login.e2e.ts
src/routes/login/_queries/: whoami.gql
src/routes/settings/libraries/: +page.svelte  LibraryList.svelte  libraries.e2e.ts
src/routes/settings/libraries/_mutations/: createFsLibrary.gql  deleteFsLibrary.gql
src/routes/settings/users/: +page.svelte  +page.ts
src/routes/settings/users/[id]/: +page.svelte  +page.ts
src/routes/settings/users/[id]/_mutations/: UpdateUser.gql
src/routes/settings/users/[id]/_queries/: User.gql
src/routes/settings/users/new/: +page.svelte
