[package]
name = "playerbrainz-entities"
version = "0.0.1"
edition = "2024"
repository.workspace = true

[dependencies]

sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros"] }
serde_json = { version = "1.0.149", default-features = false }
