[package]
name = "playerbrainz-scanner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metadata"
test = false
bench = false

required-features = ["cli"]

[[bin]]
name = "scan"
test = false
bench = false

required-features = ["cli"]

[dependencies]
assign = "1.1.1"
clap = { version = "4.6.1", optional = true, features = ["derive"] }
symphonia = { version = "0.6.0-alpha.2" }
thiserror = "2.0.18"
tokio = "1.52.1"
tracing = "0.1.44"
uuid = "1.23.1"
walkdir = "2.5.0"

[features]
default = [
    "cli"
]
cli = ["clap", "symphonia/all-codecs", "symphonia/all-formats", "symphonia/opt-simd", "tokio/full"]
