[package]
name = "playerbrainz-scanner"
version = "0.0.2"
edition = "2024"

repository.workspace = true

[[bin]]
name = "metadata"
test = false
bench = false

required-features = ["cli"]

[[bin]]
name = "scan"
test = false
bench = false

required-features = ["cli"]

[dependencies]
assign = "1.1.1"
clap = { version = "4.6.1", optional = true, features = ["derive"] }
notify-debouncer-full = "0.7.0"
symphonia = { version = "0.6.0-alpha.2" }
snafu = "0.9.0"
tokio = "1.52.1"
tracing = "0.1.44"
uuid = "1.23.1"
walkdir = "2.5.0"

[features]
default = [
    "cli"
]
cli = ["clap", "symphonia/all-codecs", "symphonia/all-formats", "symphonia/opt-simd", "tokio/full"]
