[package]
name = "playerbrainz-server"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1.0.102"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"

axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

tokio = { version = "1", features = ["full"] }

sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

serde = "1.0.228"
serde_json = "1.0.149"

dotenv = "0.15.0"

symphonia = "0.6.0-alpha.2"

playerbrainz-entities = { path = "../entities",  }
