[package]
name = "playerbrainz-server"
version = "0.0.2"
edition = "2024"

repository.workspace = true

[dependencies]

snafu = "0.9.0"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-graphql = { version = "7.2.1", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.2.1"

axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

tokio = { version = "1", features = ["full"] }

sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

serde = "1.0.228"
serde_json = "1.0.149"

dotenv = "0.15.0"

symphonia = "0.6.0-alpha.2"

playerbrainz-entities = { path = "../entities",  }
playerbrainz-scanner = { path = "../playerbrainz-scanner",  }
playerbrainz-signatures = { path = "../signatures",  }

password-auth = "1.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"
base64 = "0.22.1"
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
strum = { version = "0.28.0", features = ["derive"] }
