[package]
name = "playerbrainz-signatures"
version = "0.0.1"
edition = "2024"
repository.workspace = true

[dependencies]
httpsig = "0.0.24"
strum = { version = "0.28.0", features = ["derive"] }


# crypto
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem"] }
spki = { version = "0.7.3", default-features = false, features = ["pem"] }
sec1 = { version = "0.7.3", default-features = false, features = ["der"] }
ed25519-compact = { version = "2.2.0", default-features = false, features = [
  "random",
] }
ecdsa = { version = "0.16.9", default-features = false, features = [
  "arithmetic",
] }
p256 = { version = "0.13.2", default-features = false, features = [
  "arithmetic",
  "ecdsa",
] }
p384 = { version = "0.13.1", default-features = false, features = [
  "arithmetic",
  "ecdsa",
] }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9", default-features = false }
base64 = "0.22.1"
snafu = "0.9.0"

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
